# bytes-rs

./: CHANGELOG.md  Cargo.toml  README.md
bytes/: Cargo.toml
bytes-derive/: Cargo.toml
bytes-derive-old/: Cargo.toml
bytes-derive-old/src/: common.rs
bytes-derive/src/: common.rs  generate.rs  lib.rs  parse.rs  spec.rs  try_from_bytes.rs  try_from_bytes_dynamic.rs
bytes/examples/: flags.rs  numbers.rs  skipped.rs  strings.rs  udp.rs
bytes/src/: errors.rs  flags.rs  from.rs  from_bytes.rs  lib.rs  no_input.rs  num.rs  order.rs  spec.rs  string.rs  to.rs  to_bytes.rs
