[package]
name = "bytes-derive"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]
repository = "https://github.com/Lut99/bytes-rs"
description = "Contributes the derive macros for the `bytes`-crate."


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }
