[package]
name = "bytes"
version.workspace = true
edition = "2021"
authors = [ "Lut99" ]
repository.workspace = true
description = "A package for easily defining header-like structs that can be parsed from bytes with static interpretation."


[dependencies]
num-traits = "0.2"
bytes-derive = { path = "../bytes-derive", optional = true }


[features]
default = [ "derive" ]
derive = [ "dep:bytes-derive" ]
